Switched to ProcessBuilder to show error output