@@ -21,13 +21,14 @@ import java.io.File;
 import java.io.FilenameFilter;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.util.Map;
 import java.util.concurrent.TimeUnit;
 
 public class BootstrapMainStarter {
 
     public void start(String[] args, File nodeHome) throws Exception {
         Process theProcess = null;
-        BufferedReader inStream = null, errStream = null;
+        BufferedReader inStream = null;
         int tmpContArgs = 1;
         
         String[] tmpArgs = new String[args.length+1];
@@ -48,29 +49,18 @@ public class BootstrapMainStarter {
         }
         
         try {
-            theProcess = Runtime.getRuntime().exec(tmpArgs);
+            ProcessBuilder theProcessBuilder = new ProcessBuilder(tmpArgs).redirectErrorStream(true);
+            theProcess = theProcessBuilder.start();
+            inStream = new BufferedReader(new InputStreamReader(theProcess.getInputStream()));
+            while (theProcess.isAlive()) {
+                if (inStream.ready())
+                    System.out.println(inStream.readLine());
+            }
         } catch (IOException e) {
             System.err.println("Error en el método exec()");
             e.printStackTrace();
-        }
-
-        // leer en la corriente de salida estándar del programa llamado.
-        try {
-            inStream = new BufferedReader(new InputStreamReader(theProcess.getInputStream()));
-            errStream = new BufferedReader(new InputStreamReader(theProcess.getErrorStream()));
-            while (theProcess.isAlive()) {
-                theProcess.waitFor(500, TimeUnit.MILLISECONDS);
-                System.out.println(inStream.readLine());
-                System.out.println(errStream.readLine());
-            }
-        } catch (IOException e) {
-            System.err.println("Error en inStream.readLine()");
-            e.printStackTrace();
-        } catch (InterruptedException ie) {
-            System.err.println("Interrumpido");
         } finally {
             inStream.close();
-            errStream.close();
         }
     }
 
